@@ -2,7 +2,7 @@
 
 <!--
   OpenRemote, the Home of the Digital Home.
-  Copyright 2008-2012, OpenRemote Inc.
+  Copyright 2008-2013, OpenRemote Inc.
 
   See the contributors.txt file in the distribution for a
   full listing of individual contributors.
@@ -78,6 +78,14 @@
   <property name = "junit.vm.work.dir" value = "${testcontainer.vm.work.dir}"/>
 
 
+  <!--
+   |    Set explicit character encoding for javac - this avoids issues with some build
+   |    environments which have different system default character encodings. Defaulting
+   |    all compiled source files to UTF-8.
+   +-->
+  <property name = "default.javac.encoding" value = "utf-8"/>
+
+
   <property name = "javadoc.locale" value = "en_US"/>
   <property name = "build-config.dir" value = "build_config"/>
   <property name = "instrumented.dir" value = "build/instrumented"/>
@@ -97,10 +105,10 @@
     <fileset dir = "${lib.dir}/apache/commons-net" includes = "**/*.jar"/>
     <fileset dir = "${lib.dir}/apache/commons-lang" includes = "**/*.jar"/>
     <fileset dir = "${lib.dir}/clink" includes = "**/*.jar"/>
-  	<fileset dir = "${lib.dir}/json" includes = "**/*.jar"/>
+    <fileset dir = "${lib.dir}/json" includes = "**/*.jar"/>
     <fileset dir = "${lib.dir}/onewire" includes = "**/*.jar"/>
     <fileset dir = "${lib.dir}/drools-5.1.1" includes = "**/*.jar"/>
-  	<fileset dir = "${lib.dir}/sunrise" includes = "**/*.jar"/>
+    <fileset dir = "${lib.dir}/sunrise" includes = "**/*.jar"/>
 
   </path>
 
@@ -128,7 +136,7 @@
     <path location = "${config.dir}"/>
     <fileset dir = "${lib.dir}/apache" includes = "**/*.jar"/>
   </path>
-  
+
 
   <path id = "cobertura.path.id">
     <fileset dir = "${lib.dir}/cobertura" includes = "*.jar"/>
@@ -155,7 +163,7 @@
        ======================================================================================= -->
 
 
-  
+
   <!--
     | CLEAN:
     |
@@ -199,7 +207,7 @@
         <include name = "**/*.jar"/>
       </fileset>
       <fileset dir = "${lib.dir}/json">
-    	  <include name = "*.jar"/>
+        <include name = "*.jar"/>
       </fileset>
       <fileset dir = "${lib.dir}/onewire">
         <include name = "*.jar"/>
@@ -250,23 +258,24 @@
       </fileset>
     </copy>
 
-		<copy todir = "${webapp.classes.dir}">
-			<fileset dir = "${classes.dir}">
-				<include name = "**.*" />
-			</fileset>
-		</copy>
+    <copy todir = "${webapp.classes.dir}">
+      <fileset dir = "${classes.dir}">
+        <include name = "**.*" />
+      </fileset>
+    </copy>
 
-		<copy todir = "${classes.dir}">
-			<fileset dir = "${test.dir}">
-				<include name = "**/*.xml" />
-				<include name = "**/*.properties" />
-			</fileset>
-			<fileset dir = "${test.dir}">
-				<include name = "**/*.xml" />
-			</fileset>
- 		</copy>
-    
-    <javac destdir = "${classes.dir}" classpathref = "compile.path.id" debug = "${build.debug}">
+    <copy todir = "${classes.dir}">
+      <fileset dir = "${test.dir}">
+        <include name = "**/*.xml" />
+        <include name = "**/*.properties" />
+      </fileset>
+      <fileset dir = "${test.dir}">
+        <include name = "**/*.xml" />
+      </fileset>
+    </copy>
+
+    <javac destdir = "${classes.dir}" classpathref = "compile.path.id"
+           debug = "${build.debug}" encoding = "${default.javac.encoding}">
       <src path = "${src.dir}"/>
     </javac>
   </target>
@@ -294,7 +303,8 @@
       </fileset>
     </copy>
 
-    <javac srcdir = "${test.dir}" destdir = "${classes.dir}" classpathref = "test.path.id" debug = "true" />
+    <javac srcdir = "${test.dir}" destdir = "${classes.dir}"
+           classpathref = "test.path.id" debug = "true" encoding = "${default.javac.encoding}"/>
   </target>
 
 
@@ -352,7 +362,7 @@
 
   </target>
 
-  
+
   <!--
     | WAR:
     |
@@ -398,7 +408,7 @@
         <include name = "**/*"/>
       </fileset>
     </copy>
-    
+
 
     <parallel>
 
@@ -413,7 +423,7 @@
             fork = "true">
       </java>
 
-      
+
 
       <sequential>
 
@@ -443,7 +453,7 @@
     </parallel>
 
     <antcall  target = "-generate-junit-report"/>
-    
+
   </target>
 
 
@@ -476,7 +486,7 @@
           .">
 
     <property name = "test" value = "org.openremote.controller.suite.RESTTests"/>
-    
+
     <!-- Call the JUnit task with 'junit.single.test' property set. -->
     <antcall target = "run-test">
       <param name = "junit.single.test" value = "true"/>
@@ -629,7 +639,8 @@
       </fileset>
     </copy>
 
-    <javac srcdir = "${test.dir}" destdir = "${classes.dir}" classpathref = "test.path.id" debug = "true" />
+    <javac srcdir = "${test.dir}" destdir = "${classes.dir}" classpathref = "test.path.id"
+           debug = "true" encoding = "${default.javac.encoding}"/>
   </target>
 
 
@@ -649,14 +660,15 @@
       </fileset>
     </copy>
 
-		<copy todir = "${webapp.classes.dir}">
-			<fileset dir = "${classes.dir}">
-				<include name = "**.*" />
-			</fileset>
-		</copy>
+    <copy todir = "${webapp.classes.dir}">
+      <fileset dir = "${classes.dir}">
+        <include name = "**.*" />
+      </fileset>
+    </copy>
 
-    
-    <javac destdir = "${classes.dir}" classpathref = "compile.path.id" debug = "${build.debug}">
+
+    <javac destdir = "${classes.dir}" classpathref = "compile.path.id"
+           debug = "${build.debug}" encoding = "${default.javac.encoding}">
       <src path = "${src.dir}"/>
     </javac>
 
@@ -805,7 +817,7 @@
     <cobertura-instrument todir = "${instrumented.dir}" datafile = "${cobertura.datafile}">
       <ignore regex = "org.apache.log4j.*"/>
       <ignore regex="org.openremote.controller.jetty.*"/>
-			<ignore regex="org.openremote.controller.suite.*"/>
+      <ignore regex="org.openremote.controller.suite.*"/>
       <fileset dir = "${classes.dir}">
         <include name = "**/*.class"/>
         <exclude name="**/Jetty*.class"/>
@@ -824,15 +836,15 @@
     <property name = "test.targetclasspath" value = "${instrumented.dir}"/>
     <antcall target = "test-cov"/>
     <delete includeemptydirs = "true" dir = "${cobertura.report.dir}"/>
- 		<cobertura-report format = "html" destdir = "${cobertura.report.dir}"
+    <cobertura-report format = "html" destdir = "${cobertura.report.dir}"
                       srcdir = "${src.dir}" datafile = "${cobertura.datafile}" />
-		<cobertura-report format = "xml" destdir = "${cobertura.report.dir}"
+    <cobertura-report format = "xml" destdir = "${cobertura.report.dir}"
                       srcdir = "${src.dir}" datafile = "${cobertura.datafile}"/>
     <delete file = "operation.log" failonerror = "false"/>
     <delete file = "exception.log" failonerror = "false"/>
   </target>
 
-  
+
   <!--
     | REPORT-CHECKSTYLE:
     |
